# network-topology

./: .gitignore  EXPERIMENTS.md  HIGHER_TPU_REALISTIC_SLICES.md  HIGHER_TPU_SINGLE_SLICE.md  MOE_EXPERIMENTS.md  README.md  SLURM.md  aggregate_results.py  analyze_gpt3_stress.py  analyze_higher_tpu_circulants.py  analyze_milestones.py  plot_moe_expert_ffn_results.py  plot_moe_results.py  plot_results.py  plot_small_batched_matmul_results.py  plot_square_matmul_results.py  plot_tall_matmul_results.py  plot_topologies.py  proposal.tex  pyproject.toml  search_optimal_topology.py  sweep_gpt3.py  sweep_matmuls.py  sweep_moe.py
accelforge_configs/: tpu_v4_distributed_1d.yaml
network_topology/: __init__.py  __main__.py  accelforge_adapter.py  common.py  comms.py  cost_model.py  fixed_point.py  mapping.py  topology.py  tpu_v4.py  yaml_utils.py
report/: main.tex  technical_summary.tex
slurm/: aggregate.sbatch  gpt3_stress.sbatch  plot_moe_accelforge.sbatch  plot_small_batched_matmuls.sbatch  plot_square_matmuls.sbatch  plot_tall_matmuls.sbatch  setup_env.sh  submit.sh  submit_12524857_rerun.sbatch  submit_batched_matmuls.sbatch  submit_gpt3_175b.sbatch  submit_gpt3_175b_map64.sbatch  submit_large_map64.sbatch  submit_moe_accelforge.sbatch  submit_moe_accelforge_map64.sbatch  submit_small.sbatch  submit_small_batched_matmuls.sbatch  submit_square_matmuls.sbatch  submit_tall_matmuls.sbatch  sweep_6d.sbatch  sweep_array.sbatch  sweep_batched_matmuls.sbatch  sweep_circulant.sbatch  sweep_gpt3_175b.sbatch  sweep_moe.sbatch  sweep_moe_accelforge.sbatch  sweep_square_matmuls.sbatch  (+3 more)
(+101 files in other folders)
