[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-topology"
version = "0.1.0"
description = "Network topology modeling for distributed accelerator inference"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
# AccelForge integration (install accelforge separately from its repo)
accelforge = []
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
